--- a/client/app/src/app/core/header/header.component.html
+++ b/client/app/src/app/core/header/header.component.html
@@ -29,8 +29,9 @@
 <span>JAKE DOE'S music & merch</span> 
 
 <button mat-button [routerLink]="['/producto']" routerLinkActive="mat-raised-button">Productos</button>
-<button mat-button [routerLink]="['/']" routerLinkActive="mat-raised-button">Pedidos</button>
-
+<button mat-button [routerLink]="['/compra/cliente/1']" routerLinkActive="mat-raised-button">Compras</button>
+<button mat-button [routerLink]="['/pedido/vendedor/5']" routerLinkActive="mat-raised-button">Pedidos</button>
+  
 </mat-toolbar>
 
 <p>header works!</p>
