un par de datillos más ahí

--- a/client/app/src/app/compra/pedido-by-vendedor/pedido-by-vendedor.component.html
+++ b/client/app/src/app/compra/pedido-by-vendedor/pedido-by-vendedor.component.html
@@ -34,7 +34,7 @@
           <!-- Columna Producto -->
           <ng-container matColumnDef="total">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
-            <td mat-cell *matCellDef="let row">{{ row.Subtotal| currency: "USD" }}</td>
+            <td mat-cell *matCellDef="let row">{{ row.Subtotal| currency: "CRC" }}</td>
           </ng-container>
   
           <!-- Columna acciones -->
