--- a/client/app/src/app/compra/compra-by-cliente/compra-by-cliente.component.html
+++ b/client/app/src/app/compra/compra-by-cliente/compra-by-cliente.component.html
@@ -28,7 +28,7 @@
         <!-- Columna Producto -->
         <ng-container matColumnDef="total">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
-          <td mat-cell *matCellDef="let row">{{ row.Total| currency: "USD" }}</td>
+          <td mat-cell *matCellDef="let row">{{ row.Total| currency: "CRC" }}</td>
         </ng-container>
 
         <!-- Columna acciones -->
