--- a/client/app/src/app/compra/compra-detalle/compra-detalle.component.html
+++ b/client/app/src/app/compra/compra-detalle/compra-detalle.component.html
@@ -43,7 +43,7 @@
             <!-- Columna Producto -->
             <ng-container matColumnDef="precio">
               <th mat-header-cell *matHeaderCellDef mat-sort-header>Precio</th>
-              <td mat-cell *matCellDef="let row">{{ row.producto.Precio| currency: "USD" }}</td>
+              <td mat-cell *matCellDef="let row">{{ row.producto.Precio| currency: "CRC" }}</td>
             </ng-container>
 
             <ng-container matColumnDef="estado">
