--- a/client/app/src/app/compra/pedido-detalle/pedido-detalle.component.html
+++ b/client/app/src/app/compra/pedido-detalle/pedido-detalle.component.html
@@ -10,7 +10,7 @@
       <p><b>Vendedor: </b>{{datos.producto.vendedor.Nombre + ' ' + datos.producto.vendedor.Apellido}}</p>
       <p><b>Producto: </b>{{ datos.producto.Nombre}}</p>
       <p><b>Cantidad: </b>{{ datos.Cantidad}}</p>
-      <p><b>Subtotal: </b>{{datos.Subtotal| currency:'USD'}}</p>
+      <p><b>Subtotal: </b>{{datos.Subtotal| currency:'CRC'}}</p>
       <p><b>Fecha: </b>{{ datos.compra.Fecha | date : "hh:mm - dd/MM/yyyy"}}</p>
 
       <p><b>Categoría: </b>{{ datos.producto.categoria.Descripcion}}</p>
