Listado y detalle de productos SIN el listado de fotos

--- a/client/app/src/app/compra/compra-detalle/compra-detalle.component.html
+++ b/client/app/src/app/compra/compra-detalle/compra-detalle.component.html
@@ -7,8 +7,8 @@
     </mat-card-header>
     <mat-card-content class="dashboard-card-content">
       <p><b>Cliente </b>{{datos.cliente.Nombre + ' ' + datos.cliente.Apellido}}</p>
-      <p><b>Subtotal: </b>{{datos.Subtotal| currency:'USD'}}</p>
-      <p><b>Total: </b>{{datos.Total| currency:'USD'}}</p>
+      <p><b>Subtotal: </b>{{datos.Subtotal| currency:'CRC'}}</p>
+      <p><b>Total: </b>{{datos.Total| currency:'CRC'}}</p>
       <p><b>Método de pago: </b> {{ datos.metodoPago.Titulo}}</p>
       <p><b>Dirección: </b> {{ datos.direccion.Provincia + ', ' + 
         datos.direccion.Canton + ', ' + 
