--- a/client/app/src/app/core/header/header.component.html
+++ b/client/app/src/app/core/header/header.component.html
@@ -31,7 +31,7 @@
 <button mat-button [routerLink]="['/producto']" routerLinkActive="mat-raised-button">Productos</button>
 <button mat-button [routerLink]="['/compra/cliente/1']" routerLinkActive="mat-raised-button">Compras</button>
 <button mat-button [routerLink]="['/pedido/vendedor/5']" routerLinkActive="mat-raised-button">Pedidos</button>
-  
+<button mat-button [routerLink]="['/producto/vendedor/5']" routerLinkActive="mat-raised-button">Vendedor</button>
 </mat-toolbar>
 
 <p>header works!</p>
