--- a/client/app/src/app/producto/producto-index/producto-index.component.css
+++ b/client/app/src/app/producto/producto-index/producto-index.component.css
@@ -16,3 +16,14 @@ grid-container {
     .dashboard-card-content {
     text-align: center;
     }
+
+    .dashboard-card img {
+        /* width: 50px;
+        height: 50px;
+        max-width: 45%;
+        max-height: 45%;
+        border-radius: 15%; */
+        width: 100%;
+        height: 55%;
+        object-fit: contain;
+      }
