--- a/client/app/src/app/compra/compra-by-cliente/compra-by-cliente.component.html
+++ b/client/app/src/app/compra/compra-by-cliente/compra-by-cliente.component.html
@@ -14,15 +14,15 @@
         aria-label="Elements"
       >
         <!-- Columna Cliente -->
-        <ng-container matColumnDef="cliente">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Cliente</th>
-          <td mat-cell *matCellDef="let row">{{ row.cliente.Nombre +' '+ row.cliente.Apellido }}</td>
+        <ng-container matColumnDef="orden">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Orden No.</th>
+          <td mat-cell *matCellDef="let row">{{ row.id }}</td>
         </ng-container>
 
         <!-- Columna Fecha -->
         <ng-container matColumnDef="fecha">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha</th>
-          <td mat-cell *matCellDef="let row">{{ row.Fecha| date : "hh:mm - dd/MM/yyyy" }}</td>
+          <td mat-cell *matCellDef="let row">{{ row.Fecha| date : "dd/MM/yyyy" }}</td>
         </ng-container>
 
         <!-- Columna Producto -->
