--- a/client/app/src/app/app.component.html
+++ b/client/app/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--HEADER-->
 <app-header></app-header>
 <!--BODY-->
-<div class="body-container">
+<div class="body-container, color" >
 
     <router-outlet></router-outlet>
 
