--- a/client/app/src/app/compra/compra-by-cliente/compra-by-cliente.component.html
+++ b/client/app/src/app/compra/compra-by-cliente/compra-by-cliente.component.html
@@ -1,7 +1,7 @@
-<mat-card class="full-width">
+<mat-card class="full-width color">
   <!-- Titulo del Card -->
   <mat-card-title>
-    <h1>Compras</h1>
+    <h1 class="titulo">Compras</h1>
   </mat-card-title>
   <mat-card-content>
     <!-- Table -->
