--- a/client/app/src/app/compra/compra-detalle/compra-detalle.component.html
+++ b/client/app/src/app/compra/compra-detalle/compra-detalle.component.html
@@ -1,4 +1,4 @@
-<mat-card class="dashboard-card" *ngIf="datos"  >
+<mat-card class="dashboard-card color" *ngIf="datos"  >
   <mat-card-header>
     <mat-card-title>
       <p><b>Orden No. </b>{{datos.id}}</p>
