--- a/client/app/src/app/core/footer/footer.component.html
+++ b/client/app/src/app/core/footer/footer.component.html
@@ -1,8 +1,7 @@
-<p>footer works!</p>
 <p>
     <mat-toolbar-row color="accent" layout-align="start center" class="footer">
         <p class="title-center">
-                JAKE DOE'S music & merch
+            <img mat-card-lg-image src="../../../assets/img/logov2.png"/>
         </p>
     </mat-toolbar-row>
 </p>
