--- a/client/app/src/app/producto/producto-all-by-vendedor/producto-all-by-vendedor.component.html
+++ b/client/app/src/app/producto/producto-all-by-vendedor/producto-all-by-vendedor.component.html
@@ -1,8 +1,8 @@
-<p>producto-all-by-vendedor works!</p>
-<mat-card class="full-width">
+
+<mat-card class="full-width color">
     <!-- Titulo del Card -->
     <mat-card-title>
-      <h1>Inventario de proveedor</h1>
+      <h1 class="titulo">Inventario de proveedor</h1>
     </mat-card-title>
     <mat-card-content>
       <!-- Table -->
