--- a/client/app/src/app/compra/pedido-by-vendedor/pedido-by-vendedor.component.html
+++ b/client/app/src/app/compra/pedido-by-vendedor/pedido-by-vendedor.component.html
@@ -1,7 +1,7 @@
-<mat-card class="full-width">
+<mat-card class="full-width color">
   <!-- Titulo del Card -->
   <mat-card-title>
-    <h1>Pedidos</h1>
+    <h1 class="titulo">Pedidos</h1>
   </mat-card-title>
   <mat-card-content>
     <!-- Table -->
