--- a/client/app/src/app/core/footer/footer.component.css
+++ b/client/app/src/app/core/footer/footer.component.css
@@ -2,13 +2,22 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 40px;
+    height: 70px;
     text-align: center;
     margin: 0px;
     background-color: black;
     color:white;
+    margin-top: 70%;
 }
 .title-center{
     flex: 1 1 auto;
     text-align: center;
+}
+
+/* .color{
+    background-color: #C6AC8F !important;
+ }  */
+
+ p{
+    margin: 0%;
 }
