--- a/client/app/src/app/producto/producto-detail/producto-detail.component.css
+++ b/client/app/src/app/producto/producto-detail/producto-detail.component.css
@@ -10,3 +10,19 @@
    /* flex-direction: column;*/
    ;
   }
+.mat-grid-tile{
+  padding: 0%;
+}
+
+.dashboard-card{
+  padding: 1%;
+  margin-bottom: 5%;
+  margin-right: 50% ;
+  margin-left: 2.5% ;
+}
+.resp{
+  margin-left: 10% ;
+}
+.titulo{
+  color: #22333B;
+}
