--- a/client/app/src/app/producto/producto-detail/producto-detail.component.html
+++ b/client/app/src/app/producto/producto-detail/producto-detail.component.html
@@ -1,4 +1,4 @@
-<p>producto-detail works!</p>
+<!-- <p>producto-detail works!</p> -->
 
   <mat-dialog-content class="dialog-content">
     <!-- Contenido de la primera parte de la página -->
@@ -11,7 +11,7 @@
     <!-- Contenido de la segunda parte de la página -->
     <div class="dialog-right">
         <div *ngIf="datos">
-        <h2 mat-dialog-title>{{ datos.Nombre }}</h2>
+        <h2 mat-dialog-title class="titulo">{{ datos.Nombre }}</h2>
         <mat-dialog-content>
           <h4>{{ "Tipo de Producto: " +  datos.categoria.Descripcion}}</h4>
       
@@ -28,26 +28,25 @@
 
 
   <div>
-    <mat-grid-list [cols]="1">
-        <mat-grid-tile *ngFor="let item of datosMensaje">
-            <mat-card class="dashboard-card">
-
-              <mat-card-subtitle>
+    <mat-grid-list [cols]="1" class="grid-list">
+        <div >
+            <mat-card class="dashboard-card" *ngFor="let item of datosMensaje">
+<mat-card-subtitle>
                 <p>Pregunta</p>
               </mat-card-subtitle>
                 <mat-card-content class="dashboard-card-content">
                     <div>{{item.Pregunta}}</div>
                 </mat-card-content>
                 <div *ngIf="item.Respuesta !== null && item.Respuesta !== ''">
-                  <mat-card-subtitle>
+                  <mat-card-subtitle class="resp">
                     <p>Respuesta</p>
                   </mat-card-subtitle>
-                    <mat-card-content class="dashboard-card-content">
+                    <mat-card-content class="dashboard-card-content resp">
                         <div>{{item.Respuesta}}</div>
                     </mat-card-content>
                 </div>
             </mat-card>
-        </mat-grid-tile>
+          </div>
     </mat-grid-list>
   </div>
   
