--- a/client/app/src/app/core/header/header.component.css
+++ b/client/app/src/app/core/header/header.component.css
@@ -33,4 +33,13 @@
     justify-content: center;
     width: 120px;
   }
+
+  .mat-mdc-card-lg-image{
+    width: auto;
+    height: 100%;
+}
+
+button{
+  height: 100%;
+}
   
