--- a/client/app/src/app/core/footer/footer.component.css
+++ b/client/app/src/app/core/footer/footer.component.css
@@ -4,14 +4,14 @@
     width: 100%;
     height: 70px;
     text-align: center;
-    margin: 0px;
     background-color: black;
     color:white;
-    margin-top: 70%;
+    /*margin-top: 70%;*/
 }
 .title-center{
     flex: 1 1 auto;
     text-align: center;
+    height: 100%;
 }
 
 /* .color{
@@ -20,4 +20,9 @@
 
  p{
     margin: 0%;
+}
+
+.mat-mdc-card-lg-image{
+    width: auto;
+    height: 90%;
 }
