--- a/client/app/src/app/producto/producto-detail/producto-detail.component.css
+++ b/client/app/src/app/producto/producto-detail/producto-detail.component.css
@@ -26,3 +26,43 @@
 .titulo{
   color: #22333B;
 }
+
+/* CAROUSEL */
+
+.carousel {
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px !important;
+  margin: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+  width: 25rem;
+}
+
+.carousel-item {
+  height: 25rem;
+}
+
+.carousel-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 1%;
+}
+
+@media only screen and (max-width: 576px) {
+  main {
+    display: block;
+  }
+
+  .carousel-item {
+    height: 15rem;
+  }
+
+  .container-info-product {
+    margin-top: 2rem;
+    width: 100%;
+  }
+
+  .carousel {
+    width: 100%;
+  }
+}
