--- a/client/app/src/app/producto/producto-detail/producto-detail.component.html
+++ b/client/app/src/app/producto/producto-detail/producto-detail.component.html
@@ -1,55 +1,60 @@
 <!-- <p>producto-detail works!</p> -->
 
-  <mat-dialog-content class="dialog-content">
-    <!-- Contenido de la primera parte de la página -->
-    <div class="dialog-left ">
-
-
-
-    </div>
-  
-    <!-- Contenido de la segunda parte de la página -->
-    <div class="dialog-right">
-        <div *ngIf="datos">
-        <h2 mat-dialog-title class="titulo">{{ datos.Nombre }}</h2>
-        <mat-dialog-content>
-          <h4>{{ "Tipo de Producto: " +  datos.categoria.Descripcion}}</h4>
-      
-          <p>{{ datos.Descripcion }}</p>
-          <p>{{"Disponibles: " + datos.Cantidad}}</p>
-          <h4>{{"Estado: " + datos.estado.Descripcion}}</h4>
-          <h4>{{ datos.Precio | currency : "USD" }}</h4>
-        </mat-dialog-content>
-      
-        <mat-dialog-actions> </mat-dialog-actions>
-      </div>
-    </div>
-  </mat-dialog-content>
-
-
-  <div>
-    <mat-grid-list [cols]="1" class="grid-list">
-        <div >
-            <mat-card class="dashboard-card" *ngFor="let item of datosMensaje">
-<mat-card-subtitle>
-                <p>Pregunta</p>
-              </mat-card-subtitle>
-                <mat-card-content class="dashboard-card-content">
-                    <div>{{item.Pregunta}}</div>
-                </mat-card-content>
-                <div *ngIf="item.Respuesta !== null && item.Respuesta !== ''">
-                  <mat-card-subtitle class="resp">
-                    <p>Respuesta</p>
-                  </mat-card-subtitle>
-                    <mat-card-content class="dashboard-card-content resp">
-                        <div>{{item.Respuesta}}</div>
-                    </mat-card-content>
-                </div>
-            </mat-card>
-          </div>
-    </mat-grid-list>
+<mat-dialog-content class="dialog-content">
+  <!-- Contenido de la primera parte de la página -->
+  <div class="dialog-left">
+    <c-carousel>
+      <c-carousel-indicators></c-carousel-indicators>
+      <c-carousel-inner>
+        <c-carousel-item *ngFor="let item of datos.FotoProducto">
+          <img
+          [src]="getImageUrl(item.Foto.data)"
+            class="d-block w-100"
+            loading="lazy" />
+        </c-carousel-item>
+      </c-carousel-inner>
+      <c-carousel-control [routerLink] caption="Previous" direction="prev"></c-carousel-control>
+      <c-carousel-control [routerLink] caption="Next" direction="next"></c-carousel-control>
+    </c-carousel>
   </div>
-  
-      
-  
- 
+
+  <!-- Contenido de la segunda parte de la página -->
+  <div class="dialog-right">
+    <div *ngIf="datos">
+      <h2 mat-dialog-title class="titulo">{{ datos.Nombre }}</h2>
+      <mat-dialog-content>
+        <h4>{{ "Tipo de Producto: " + datos.categoria.Descripcion }}</h4>
+
+        <p>{{ datos.Descripcion }}</p>
+        <p>{{ "Disponibles: " + datos.Cantidad }}</p>
+        <h4>{{ "Estado: " + datos.estado.Descripcion }}</h4>
+        <h4>{{ datos.Precio | currency : "USD" }}</h4>
+      </mat-dialog-content>
+
+      <mat-dialog-actions> </mat-dialog-actions>
+    </div>
+  </div>
+</mat-dialog-content>
+
+<div>
+  <mat-grid-list [cols]="1" class="grid-list">
+    <div>
+      <mat-card class="dashboard-card" *ngFor="let item of datosMensaje">
+        <mat-card-subtitle>
+          <p>Pregunta</p>
+        </mat-card-subtitle>
+        <mat-card-content class="dashboard-card-content">
+          <div>{{ item.Pregunta }}</div>
+        </mat-card-content>
+        <div *ngIf="item.Respuesta !== null && item.Respuesta !== ''">
+          <mat-card-subtitle class="resp">
+            <p>Respuesta</p>
+          </mat-card-subtitle>
+          <mat-card-content class="dashboard-card-content resp">
+            <div>{{ item.Respuesta }}</div>
+          </mat-card-content>
+        </div>
+      </mat-card>
+    </div>
+  </mat-grid-list>
+</div>
