--- a/client/app/src/app/producto/producto-index/producto-index.component.css
+++ b/client/app/src/app/producto/producto-index/producto-index.component.css
@@ -1,46 +1,46 @@
+.grid-container {
+  margin: 20px;
+  margin-bottom: 90px;
+}
+.dashboard-card {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  right: 15px;
+  bottom: 15px;
+}
+.more-button {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+}
+.dashboard-card-content {
+  text-align: center;
+  margin-left: 50%;
+}
 
-grid-container {
-    margin: 20px;
-    }
-    .dashboard-card {
-    position: absolute;
-    top: 15px;
-    left: 15px;
-    right: 15px;
-    bottom: 15px;
-    }
-    .more-button {
-    position: absolute;
-    top: 5px;
-    right: 10px;
-    }
-    .dashboard-card-content {
-    text-align: center;
-    margin-left:50%;
-    }
-
-    .dashboard-card img {
-        /* width: 50px;
+.dashboard-card img {
+  /* width: 50px;
         height: 50px;
         max-width: 45%;
         max-height: 45%;
         border-radius: 15%; */
-        width: 100%;
-        height: 55%;
-        object-fit: contain;
-      }
-.mat-h1{
+  width: 100%;
+  height: 55%;
+  object-fit: contain;
+}
+.mat-h1 {
   margin: 1%;
   text-align: center;
-  color: #22333B;
+  color: #22333b;
 }
-.fotoProducto{
-  margin-top:5%;
+.fotoProducto {
+  margin-top: 5%;
 }
-.dk{
-  right:50px;
+.dk {
+  right: 50px;
   border-radius: 5px;
-  background-color: #22333B;
+  background-color: #22333b;
   color: white;
   padding: 1%;
 }
