--- a/client/app/src/styles.css
+++ b/client/app/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@coreui/coreui/dist/css/coreui.min.css';
+
 
 html, body { height: 100%; }
 body { margin: 0; 
