--- a/client/app/src/app/compra/pedido-diag/pedido-diag.component.html
+++ b/client/app/src/app/compra/pedido-diag/pedido-diag.component.html
@@ -12,7 +12,7 @@
       <!-- <p><b>Vendedor: </b>{{datos.producto.vendedor.Nombre + ' ' + datos.producto.vendedor.Apellido}}</p> -->
       <p><b>Producto: </b>{{ datos.producto.Nombre}}</p>
       <p><b>Cantidad: </b>{{ datos.Cantidad}}</p>
-      <p><b>Subtotal: </b>{{datos.Subtotal| currency:'CRC'}}</p>
+      <p><b>Subtotal: </b>{{datos.Subtotal | currency : "₡" }}</p>
 
 
       <!-- <p><b>Categoría: </b>{{ datos.producto.categoria.Descripcion}}</p>
