--- a/client/app/src/app/producto/producto-diag/producto-diag.component.html
+++ b/client/app/src/app/producto/producto-diag/producto-diag.component.html
@@ -15,7 +15,7 @@
         <p>{{ datos.Descripcion }}</p>
         <p>{{"Disponibles: " + datos.Cantidad}}</p>
         <h4>{{"Estado: " + datos.estado.Descripcion}}</h4>
-        <h4>{{ datos.Precio | currency : "USD" }}</h4>
+        <h4>{{ datos.Precio  | currency : "₡"  }}</h4>
       </mat-dialog-content>
     
       <mat-dialog-actions> </mat-dialog-actions>
