--- a/client/app/src/app/compra/pedido-by-vendedor/pedido-by-vendedor.component.html
+++ b/client/app/src/app/compra/pedido-by-vendedor/pedido-by-vendedor.component.html
@@ -35,7 +35,7 @@
         <!-- Columna Producto -->
         <ng-container matColumnDef="total">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Subtotal</th>
-          <td mat-cell *matCellDef="let row">{{ row.Subtotal| currency: "CRC" }}</td>
+          <td mat-cell *matCellDef="let row">{{ row.Subtotal | currency : "₡" }}</td>
         </ng-container>
 
         <!-- Columna acciones -->
