--- a/client/app/src/app/producto/producto-all-by-vendedor/producto-all-by-vendedor.component.html
+++ b/client/app/src/app/producto/producto-all-by-vendedor/producto-all-by-vendedor.component.html
@@ -35,7 +35,7 @@
           <!-- Columna Precio -->
           <ng-container matColumnDef="precio">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Precio</th>
-            <td mat-cell *matCellDef="let row">{{ row.Precio }}</td> 
+            <td mat-cell *matCellDef="let row">{{ row.Precio  | currency : "₡"  }}</td> 
           </ng-container>
 
            
