--- a/client/app/src/app/producto/producto-detail/producto-detail.component.html
+++ b/client/app/src/app/producto/producto-detail/producto-detail.component.html
@@ -29,7 +29,7 @@
         <p>{{"Proveedor: " + datos.vendedor.Nombre + " " + datos.vendedor.Apellido}}</p>
         <p>{{ "Disponibles: " + datos.Cantidad }}</p>
         <h4>{{ "Estado: " + datos.estado.Descripcion }}</h4>
-        <h4>{{ datos.Precio | currency : "USD" }}</h4>
+        <h4>{{ datos.Precio | currency : "₡" }}</h4>
       </mat-dialog-content>
 
       <mat-dialog-actions> </mat-dialog-actions>
