--- a/client/app/src/app/producto/producto-detail/producto-detail.component.html
+++ b/client/app/src/app/producto/producto-detail/producto-detail.component.html
@@ -3,59 +3,98 @@
 <mat-dialog-content class="dialog-content">
   <!-- Contenido de la primera parte de la página -->
   <div class="dialog-left">
-    <c-carousel>
-      <c-carousel-indicators></c-carousel-indicators>
-      <c-carousel-inner>
-        <c-carousel-item *ngFor="let item of datos.FotoProducto">
-          <img
-          [src]="getImageUrl(item.Foto.data)"
-            class="d-block w-100"
-            loading="lazy" />
-        </c-carousel-item>
-      </c-carousel-inner>
-      <c-carousel-control [routerLink] caption="Previous" direction="prev"></c-carousel-control>
-      <c-carousel-control [routerLink] caption="Next" direction="next"></c-carousel-control>
-    </c-carousel>
+    <div class="product">
+      <c-carousel>
+        <c-carousel-indicators></c-carousel-indicators>
+        <c-carousel-inner>
+          <c-carousel-item *ngFor="let item of datos.FotoProducto">
+            <img
+              [src]="getImageUrl(item.Foto.data)"
+              class="d-block w-100"
+              loading="lazy"
+            />
+          </c-carousel-item>
+        </c-carousel-inner>
+        <c-carousel-control
+          [routerLink]
+          caption="Previous"
+          direction="prev"
+        ></c-carousel-control>
+        <c-carousel-control
+          [routerLink]
+          caption="Next"
+          direction="next"
+        ></c-carousel-control>
+      </c-carousel>
+
+      <div class="productInfo" *ngIf="datos">
+        <h2 mat-dialog-title class="titulo">{{ datos.Nombre }}</h2>
+        <mat-dialog-content>
+          <h4>{{ "Tipo de Producto: " + datos.categoria.Descripcion }}</h4>
+
+          <p>{{ datos.Descripcion }}</p>
+          <p>
+            {{
+              "Proveedor: " +
+                datos.vendedor.Nombre +
+                " " +
+                datos.vendedor.Apellido
+            }}
+          </p>
+          <p>{{ "Disponibles: " + datos.Cantidad }}</p>
+          <h4>{{ "Estado: " + datos.estado.Descripcion }}</h4>
+          <h4>{{ datos.Precio | currency : "₡" }}</h4>
+        </mat-dialog-content>
+
+        <mat-dialog-actions> </mat-dialog-actions>
+      </div>
+    </div>
+    <div class="reviews">
+      <h3>Preguntas al vendedor</h3>
+      <br />
+      <mat-grid-list [cols]="1" class="grid-list">
+        <div>
+          <mat-card class="dashboard-card" *ngFor="let item of datosMensaje">
+            <mat-card-subtitle>
+              <p>Pregunta</p>
+            </mat-card-subtitle>
+            <mat-card-content class="dashboard-card-content">
+              <div>{{ item.Pregunta }}</div>
+            </mat-card-content>
+            <div *ngIf="item.Respuesta !== null && item.Respuesta !== ''">
+              <mat-card-subtitle class="resp">
+                <p>Respuesta</p>
+              </mat-card-subtitle>
+              <mat-card-content class="dashboard-card-content resp">
+                <div>{{ item.Respuesta }}</div>
+              </mat-card-content>
+            </div>
+          </mat-card>
+        </div>
+      </mat-grid-list>
+    </div>
   </div>
 
   <!-- Contenido de la segunda parte de la página -->
   <div class="dialog-right">
-    <div *ngIf="datos">
-      <h2 mat-dialog-title class="titulo">{{ datos.Nombre }}</h2>
-      <mat-dialog-content>
-        <h4>{{ "Tipo de Producto: " + datos.categoria.Descripcion }}</h4>
+    <div class="recommended">
+      <div *ngFor="let item of listaRecomendados">
+        <button *ngIf="item.id !== datos.id"
+          atTooltip="Detalle Producto"
+          aria-label="Detalle Producto"
+          (click)="detalleProducto(item.id)"
+          class="recommendedCard"
+        >
+          <img
+            mat-card-image
+            [src]="getImageUrl(item.FotoProducto[0].Foto.data)"
+            alt="{{ item.Nombre }}"
+          />
+          <div>{{ item.Nombre }}</div>
 
-        <p>{{ datos.Descripcion }}</p>
-        <p>{{"Proveedor: " + datos.vendedor.Nombre + " " + datos.vendedor.Apellido}}</p>
-        <p>{{ "Disponibles: " + datos.Cantidad }}</p>
-        <h4>{{ "Estado: " + datos.estado.Descripcion }}</h4>
-        <h4>{{ datos.Precio | currency : "₡" }}</h4>
-      </mat-dialog-content>
-
-      <mat-dialog-actions> </mat-dialog-actions>
+          <div class="dk">{{ item.Precio | currency : "₡" }}</div>
+        </button>
+      </div>
     </div>
   </div>
 </mat-dialog-content>
-
-<div>
-  <mat-grid-list [cols]="1" class="grid-list">
-    <div>
-      <mat-card class="dashboard-card" *ngFor="let item of datosMensaje">
-        <mat-card-subtitle>
-          <p>Pregunta</p>
-        </mat-card-subtitle>
-        <mat-card-content class="dashboard-card-content">
-          <div>{{ item.Pregunta }}</div>
-        </mat-card-content>
-        <div *ngIf="item.Respuesta !== null && item.Respuesta !== ''">
-          <mat-card-subtitle class="resp">
-            <p>Respuesta</p>
-          </mat-card-subtitle>
-          <mat-card-content class="dashboard-card-content resp">
-            <div>{{ item.Respuesta }}</div>
-          </mat-card-content>
-        </div>
-      </mat-card>
-    </div>
-  </mat-grid-list>
-</div>
