solo preguntas y parte respuestas

--- a/client/app/src/app/core/header/header.component.html
+++ b/client/app/src/app/core/header/header.component.html
@@ -8,6 +8,8 @@
 <button mat-button [routerLink]="['/compra/cliente/1']" routerLinkActive="mat-raised-button">Compras</button>
 <button mat-button [routerLink]="['/pedido/vendedor/5']" routerLinkActive="mat-raised-button">Pedidos</button>
 <button mat-button [routerLink]="['/producto/vendedor/5']" routerLinkActive="mat-raised-button">Proveedor</button>
+<button mat-button [routerLink]="['/mensaje/producto/vendedor/5']" routerLinkActive="mat-raised-button">Mensajes</button>
+
 </mat-toolbar>
 
 <!-- <p>header works!</p> -->
