--- a/client/app/src/app/compra/compra-by-cliente/compra-by-cliente.component.html
+++ b/client/app/src/app/compra/compra-by-cliente/compra-by-cliente.component.html
@@ -35,16 +35,18 @@
         <ng-container matColumnDef="acciones">
           <th mat-header-cell *matHeaderCellDef>Acciones</th>
           <td mat-cell *matCellDef="let row">
-            <button
-              mat-mini-fab
-              color="accent"
-              matTooltip="Detalle Pedido"
-              aria-label="Detalle Pedido"
-              color="primary"
-              (click)="detalle(row.id)"
-            >
-              <mat-icon class="mat-18">info</mat-icon>
-            </button>
+            
+            <button mat-mini-fab class="btnDetalle"
+                color="accent"
+                matTooltip="Detalle Compra"
+                aria-label="Detalle Compra"
+                color="primary"
+                (click)="detalle(row.id)"
+              >
+              <mat-icon>info</mat-icon>
+              </button>
+            
+            
           </td>
         </ng-container>
 
