--- a/client/app/src/app/compra/pedido-by-vendedor/pedido-by-vendedor.component.html
+++ b/client/app/src/app/compra/pedido-by-vendedor/pedido-by-vendedor.component.html
@@ -43,14 +43,14 @@
           <th mat-header-cell *matHeaderCellDef>Acciones</th>
           <td mat-cell *matCellDef="let row">
             <button
-              mat-mini-fab
+              mat-mini-fab class="btnDetalle"
               color="accent"
               matTooltip="Detalle Pedido"
               aria-label="Detalle Pedido"
               color="primary"
               (click)="detalle(row.id)"
             >
-              <mat-icon class="mat-18">info</mat-icon>
+              <mat-icon >info</mat-icon>
             </button>
           </td>
         </ng-container>
