--- a/client/app/src/app/mensaje/mensaje-index/mensaje-index.component.css
+++ b/client/app/src/app/mensaje/mensaje-index/mensaje-index.component.css
@@ -1,11 +1,11 @@
 .color{
     background-color:#C6AC8F !important;
-  }
+  } 
   .titulo{
     text-align: center;
     color: #22333B;
     margin: 1%;
   }
-  .btnDetalle:hover{
+  .btnMensajes:hover{
     background-color: #C44536;
   }
