--- a/client/app/src/app/producto/producto-detail/producto-detail.component.css
+++ b/client/app/src/app/producto/producto-detail/producto-detail.component.css
@@ -3,10 +3,14 @@
   justify-content: space-between;
 }
 .dialog-left {
-  width: 75%; /* Ajusta el ancho de la primera parte según tus necesidades */
+  width: 75%; 
+  display: flex;
+  flex-direction: column;
 }
 .dialog-right {
-  width: 25%; /* Ajusta el ancho de la segunda parte según tus necesidades */
+  width: 25%; 
+  display: flex;
+  flex-direction: column;
   /* flex-direction: column;*/
 }
 .mat-grid-tile {
@@ -32,12 +36,13 @@
   margin: 1rem;
   box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
     0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+  display: flex;
 }
 
 .dashboard-card {
   padding: 1%;
   margin-bottom: 5%;
-  margin-right: 50%;
+  margin-right: 10%;
   margin-left: 2.5%;
 }
 .resp {
@@ -47,6 +52,38 @@
   color: #22333b;
   margin-top: 5%;
 }
+
+.btnGuardar:hover{
+    background-color: #C44536;
+  
+}
+/*QUESTIONS*/
+
+.dialog-left-questions {
+  /*   width: 75%; 
+    display: flex;
+    flex-direction: column; */
+    width: 60%;
+    display: flex;
+    padding: 0;
+    margin: 0%;
+  }
+  .dialog-right-questions {
+  /*   width: 75%; 
+    display: flex;
+    flex-direction: column; */
+    width: 40%;
+    display: flex;
+    padding: 5%;
+    flex-direction: column;
+    text-align: center;
+  
+  }
+  
+  .full-width {
+    width: 100%;
+  }
+
 
 /* CAROUSEL */
 
