--- a/client/app/src/app/mensaje/mensaje-all-by-producto/mensaje-all-by-producto.component.html
+++ b/client/app/src/app/mensaje/mensaje-all-by-producto/mensaje-all-by-producto.component.html
@@ -4,7 +4,7 @@
       <mat-grid-list [cols]="1" class="grid-list">
         <h3>Preguntas de usuarios</h3>
         <br />
-          <mat-card class="dashboard-card" *ngFor="let item of filtrarDatosMensaje()">
+          <mat-card class="dashboard-card" *ngFor="let item of datosMensaje;let i = index;">
             <div >
               <mat-card-subtitle>
                 <p>Pregunta</p>
@@ -17,23 +17,24 @@
                 <mat-card-subtitle>
                   <p>Respuesta</p>
                 </mat-card-subtitle>
-                <form [formGroup]="preguntaForm" (ngSubmit)="crearPregunta()" > 
-                  <input type="hidden" formControlName="id" />
-                  <input type="hidden" formControlName="clienteId" />
+                <form [formGroup]="preguntaForms[i]" (ngSubmit)="crearRespuesta(i)" > 
+                  <input type="hidden" formControlName="mensajeId"  />
+                  <input type="hidden" formControlName="productoId"/>
+                  <input type="hidden" formControlName="clienteId"  />
+                  <input type="hidden" formControlName="pregunta" />
+                  <!-- <input type="hidden" formControlName="productoId" [value] = "item.ProductoId"/>
+                  <input type="hidden" formControlName="clienteId" [value] = "item.ClienteId" />
+                  <input type="hidden" formControlName="pregunta" [value] = "item.Pregunta"/> -->
                       <mat-form-field class="full-width">
-                        <mat-label>Escriba aquí</mat-label>
-                        <textarea matInput formControlName="pregunta" maxlength="500" >  </textarea>
+                        <mat-label>Responder aquí</mat-label>
+                        <textarea matInput formControlName="respuesta" maxlength="500" >  </textarea>
                         <mat-hint align="end"> / 500</mat-hint>
-                         
                       </mat-form-field> 
-                  <button mat-raised-button class="btnResponder" color="accent" type="submit"
-                    color="primary" >
+                  <button mat-raised-button class="btnResponder" color="accent" type="submit" color="primary" >
                     Responder
                   </button>
                 </form> 
               </div>
-
-              
               </div>  
           </mat-card>
       </mat-grid-list>
